[Settings] Add custom circle battery options (2/2)
new slim feature

- custom circle color
- custom circle text color
- custom animation speed
- compatibel to all themes from theme engine
- option to reset it to theme behaviour

Patchset 2

- rebased

Change-Id: I0b0953f2c9fe45599c20e00024a1d43fb55fe868
Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

Conflicts:
	res/values/strings.xml
	res/xml/status_bar_battery_style.xml
	src/com/android/settings/cyanogenmod/StatusBarBatteryStyle.java

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5506,4 +5506,14 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="dual_pane_prefs_off">Never</string>
     <string name="dual_pane_prefs_landscape">Only in landscape</string>
 
+    <string name="circle_battery_color">Circle color</string>
+    <string name="circle_battery_text_color">Circle text color</string>
+    <string name="circle_battery_animation_speed">Circle animation speed</string>
+    <string name="circle_battery_animation_speed_none">None</string>
+    <string name="circle_battery_animation_speed_slow">Slow</string>
+    <string name="circle_battery_animation_speed_stock">Normal</string>
+    <string name="circle_battery_animation_speed_fast">Fast</string>
+    <string name="circle_battery_reset_title">Reset circle colors</string>
+    <string name="circle_battery_reset_summary">Reset circle colors to apply installed theme engine colors</string>
+
 </resources>
