--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5926,4 +5926,7 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="sound_lock_volume_keys_title">Lock volume keys</string>
     <string name="sound_lock_volume_keys_summary">Prevents accidental unset of silent mode by pressing volume keys</string>
 
+    <string name="title_toggle_favcontact">Toggle Favorite Contact</string>
+    <string name="title_tile_favcontact">Favorite Contact</string>
+
 </resources>
