--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5114,6 +5114,7 @@
     <string name="title_toggle_favcontact">Toggle Favorite Contact</string>
     <string name="title_tile_favcontact">Favorite Contact</string>
     <string name="title_tile_usb_tether">USB Tether</string>
+    <string name="title_tile_volume">Volume</string>
 
     <string name="title_dynamic_tiles">Dynamic tiles</string>
     <string name="dynamic_tiles_note_title">Note</string>
