--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5435,4 +5435,7 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="disable_fullscreen_keyboard_title">Disable fullscreen keyboard</string>
     <string name="disable_fullscreen_keyboard_summary">Landscape keyboard will never take up entire screen</string>
 
+    <!-- ASS Misc settings -->
+    <string name="chronus_title">Chronus</string>
+
 </resources>
