--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5430,6 +5430,10 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
     <string name="clock_date_string_edittext_summary">Enter string</string>
 
+    <string name="custom_carrier_label_title">Custom carrier label</string>
+    <string name="custom_carrier_label_explain">Specify the carrier label or leave it blank.</string>
+    <string name="custom_carrier_label_notset">Carrier label not specified</string>
+
     <!-- Keyboard and Input ASS methods  -->
     <string name="title_keyboard_input">Keyboard and input methods</string>
     <string name="disable_fullscreen_keyboard_title">Disable fullscreen keyboard</string>
