--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1489,6 +1489,15 @@
     <!-- Wi-Fi settings screen, advanced, title of the item to show the Wi-Fi device's current IP address. -->
     <string name="wifi_advanced_ip_address_title">IP address</string>
 
+    <!-- Wi-Fi settings diables message if Wifi is off-->
+    <string name="wifi_setting_countrycode_disabled">Enable Wi-Fi to change this option.</string>
+    <!-- Wi-Fi settings screen, advanced, title of the item to set the Wi-Fi priority. -->
+    <string name="wifi_setting_priority_title">Wi-Fi priority</string>
+    <!-- Wi-Fi settings screen, setting summary for setting the Wi-Fi priority-->
+    <string name="wifi_setting_priority_summary">Specify the priority of Wi-Fi networks</string>
+    <string name="wifi_priority_disabled">Enable Wi-Fi to specify the priority</string>
+    <string name="ass_wifi_settings_title">Wi-Fi</string>
+
     <!-- Wifi Advanced settings.  Used as a label under the shortcut icon that goes to Wifi advanced settings. [CHAR LIMIT=20]-->
     <string name="wifi_advanced_settings_label">IP settings</string>
     <!-- Menu item to save the IP settings -->
