bit newbish. Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5047,9 +5047,9 @@
     <string name="toggle_color_title">Toggles color and bar</string>
     <string name="enable_toggle_colors_title">Enable toggle colors</string>
     <string name="enable_toggle_bar_title">Enable toggle bar</string>
-    <string name="toggle_icon_color_on_title">Set color for 'on' icons</string>
+    <string name="toggle_icon_color_on_title">Set color for active icons</string>
     <string name="toggle_icon_color_on_summary">Sets color for activated toggle icons</string>
-    <string name="toggle_icon_color_off_title">Set color for 'off' icons</string>
+    <string name="toggle_icon_color_off_title">Set color for inactive icons</string>
     <string name="toggle_icon_color_off_summary">Sets color for not activated toggle icons</string>
 
     <!-- Setting checkbox summary for displaying USB debugging notification -->
