--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5481,6 +5481,9 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="lockscreen_use_widget_container_carousel_title">Use widget carousel in portrait</string>
     <string name="lockscreen_use_widget_container_carousel_summary">Use carousel animation in portrait like it is in landscape when switching between lockscreen widgets.</string>
 
+    <string name="lockscreen_widgets_title">Enable all widgets</string>
+    <string name="lockscreen_widgets_summary">Ability to add widgets on lockscreen</string>
+
     <string name="disable_bootanimation_title">Disable boot animation</string>
     <string name="custom_bootanimation_title">Custom boot animation</string>
     <string name="custom_bootanimation_summary">Select bootanimation zip from sdcard. Previous bootanimation will be backed up to /system/media.</string>
