--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5483,6 +5483,8 @@ rience. Better keep it disabled on lower end devices.</string>
 
     <string name="lockscreen_widgets_title">Enable all widgets</string>
     <string name="lockscreen_widgets_summary">Ability to add widgets on lockscreen</string>
+    <string name="lockscreen_widgets_all_title">Enable all widgets</string>
+    <string name="lockscreen_widgets_all_summary">Ability to add widgets on lockscreen</string>
 
     <string name="disable_bootanimation_title">Disable boot animation</string>
     <string name="custom_bootanimation_title">Custom boot animation</string>
