--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5555,4 +5555,12 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="circle_battery_reset_title">Reset circle colors</string>
     <string name="circle_battery_reset_summary">Reset circle colors to apply installed theme engine colors</string>
 
+    <string name="statusbar_background_color">Statusbar color</string>
+
+    <string name="background_style">Background Color Style</string>
+    <string name="bgs_color">Color/Alpha only</string>
+    <string name="bgs_defaultbg_plus_color">Default Background + Color/Alpha</string>
+    <string name="bgs_defaultbg">Default Background only</string>
+    <string name="statusbar_bg">Statusbar background</string>
+
 </resources>
