--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5057,6 +5057,7 @@
     <string name="status_bar_style_hidden">Hidden</string>
     <string name="status_bar_signal_text_show_text">Text</string>
     <string name="status_bar_battery_status_percentage">Percentage</string>
+<string name="status_bar_battery_status_icon_percentage">Icon with percentage</string>
     <string name="status_bar_battery_status_circle">Circle</string>
     <string name="status_bar_battery_status_circle_percentage">Circle with percentage</string>
 
@@ -5419,7 +5420,8 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="navbar_restart_systemui_summary">Change this option will restart SystemUI</string>
 
     <string name="interface_title">Interface</string>
-    <string name="status_bar_battery_status_dotted_circle">Dotted Circle with percentage</string>
+    <string name="status_bar_battery_status_dotted_circle_percentage">Dotted Circle with percentage</string>
+    <string name="status_bar_battery_status_dotted_circle">Dotted Circle</string>
 
     <!-- General UI -->
     <string name="misc_short">Misc</string>
@@ -5564,14 +5566,14 @@ rience. Better keep it disabled on lower end devices.</string>
 
     <string name="circle_battery_color">Circle color</string>
     <string name="circle_battery_title">Battery circle style</string>
-    <string name="circle_battery_text_color">Circle text color</string>
+    <string name="battery_text_color">Percentage text color</string>
     <string name="circle_battery_animation_speed">Circle animation speed</string>
     <string name="circle_battery_animation_speed_none">None</string>
     <string name="circle_battery_animation_speed_slow">Slow</string>
     <string name="circle_battery_animation_speed_stock">Normal</string>
     <string name="circle_battery_animation_speed_fast">Fast</string>
-    <string name="circle_battery_reset_title">Reset circle colors</string>
-    <string name="circle_battery_reset_summary">Reset circle colors to apply installed theme engine colors</string>
+    <string name="battery_color_reset_title">Reset battery colors</string>
+    <string name="battery_color_reset_summary">Reset battery colors to apply installed theme engine colors</string>
 
     <string name="statusbar_background_color">Statusbar color</string>
 
