Do not disturb. Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5588,4 +5588,8 @@ rience. Better keep it disabled on lower end devices.</string>
   <string name="scroll_friction_title">Scroll friction</string>
   <string name="custom_fling_velocity_title">Scroll fling velocity</string>
 
+    <!-- Do not disturb -->
+  <string name="status_bar_donotdisturb_title">Do not disturb</string>
+  <string name="status_bar_donotdisturb_summary">Disable ticker animation for incoming notifications</string>
+
 </resources>
