--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5628,4 +5628,12 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="alert_reboot_message">This change needs a reboot to be applied. Do you want to reboot now?</string>
     <string name="alert_yes">Yes</string>
     <string name="alert_no">No</string>
+    
+    <string name="summary_expanded_desktop">%1$s</string>
+    <string name="expanded_desktop_summary">Show or change expanded desktop mode</string>
+    <string name="expanded_desktop_disabled">Off</string>
+    <string name="expanded_desktop_only_nav_bar">Hide navigation bar</string>
+    <string name="expanded_desktop_only_status_bar">Hide status bar</string>
+    <string name="expanded_desktop_both_hidden">Hide navigation and status bar</string>
+
 </resources>
