--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5610,6 +5610,10 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="icon_custom">Custom</string>
     <string name="choose_app">Choose application</string>
 
+    <!-- Swap volume buttons when the screen is rotated by 90 or 180 degrees -->
+    <string name="swap_volume_buttons_title">Swap volume buttons</string>
+    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated by 90 or 180 degrees</string>
+
     <!-- Automatic brightness customization -->
     <string name="light_sensor_current_value">Current light sensor value: <xliff:g id="light_level">%d</xliff:g> lux</string>
     <string name="auto_brightness_dialog_title">Automatic brightness levels</string>
