--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6559,4 +6559,8 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <!-- Font size sample text. This needs to be a very short string, as it is shown in
     multiple font sizes in a limited amount of space. -->
     <string name="font_size_sample">Sample</string>
+
+    <string name="lock_before_unlock_title">Show slider before secure unlock</string>
+    <string name="lock_before_unlock_summary">Show slider lockscreen before secure unlock mechanism</string>
+
 </resources>
