Option to set policy for low battery warning Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Conflicts:
	res/values/arrays.xml
	res/values/strings.xml

Conflicts:
	res/values/arrays.xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5800,4 +5800,6 @@ rience. Better keep it disabled on lower end devices.</string>
     <!-- Notification Behavior Preferences -->
    <string name="notification_behaviour_title">Notification behavior</string>
 
+    <string name="pref_low_battery_warning_policy_title">Low battery warning</string>
+
 </resources>
