Add notification behavior selections. Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5713,4 +5713,7 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="notification_shortcuts_icon_picker_twitter">Twitter</string>
     <string name="notification_shortcuts_icon_picker_unlock">Unlock</string>
 
+    <!-- Notification Behavior Preferences -->
+   <string name="notification_behaviour_title">Notification behavior</string>
+
 </resources>
