--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5825,4 +5825,8 @@ rience. Better keep it disabled on lower end devices.</string>
    <string name="notification_show_wifi_ssid_title">Show Wifi network name</string>
    <string name="notification_show_wifi_ssid_summary">Display the name of the currently connected Wifi network</string>
 
+    <!-- Breathing Notifications -->
+   <string name="mms_breath">Breathing SMS</string>
+   <string name="mms_breath_summary">Will give your sms notifications a breathing effect on the statusbar.</string>
+
 </resources>
