Settings: percentage text charging indicator and custom color (2/2)
Due some user complains cause of missing charging indicator on
battery percentage and percentage+icon in statusbar this commit
introduces two features

- percentage/percentage + icon color indicator on charging
  (default color = green)
- custom charging color for all battery symbols with percentage text
  (percentage/percentage+icon/circle with percentage/dotted circle with percentage

- a bit code cleanup

Patchset 2
- cleanup to reduce provider settings calls

Patchset 3+4
- cleanup + commit message

cheers

Change-Id: I9bba9a051f9623fb87e6cb95f5520f7eeb991c43
Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

Conflicts:
	res/values/strings.xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5641,6 +5641,7 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="circle_battery_color">Circle color</string>
     <string name="circle_battery_title">Battery circle style</string>
     <string name="battery_text_color">Percentage text color</string>
+    <string name="battery_text_charging_color">Percentage text charging color</string>
     <string name="circle_battery_animation_speed">Circle animation speed</string>
     <string name="circle_battery_animation_speed_none">None</string>
     <string name="circle_battery_animation_speed_slow">Slow</string>
