Settings: Add Permissions Management to AOKP [1/4]
So that user can easily access the Permissions Management app via settings.

Change-Id: I4f30389c3f8c9f05c0279c60ed819a65aa0d69df
Signed-off-by: Rohan Mathur <rohanmathur34@gmail.com>
Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

Conflicts:
	res/values/strings.xml
	res/xml/settings_headers.xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6026,4 +6026,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="pie_action_power">Screen Off</string>
     <string name="pie_action_notifications">Notifications</string>
     <string name="pie_action_none">None</string>
+
+    <!-- Permissions Management -->
+    <string name="permissions_settings_title">Permissions</string>
 </resources>
