--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5859,4 +5859,7 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="beanstalk_facebook_summary">Subscribe to BeanStalk Facebook page for updates.</string>
     <string name="title_about">About BeanStalk</string>
 
+    <!-- TRDS Settings -->
+    <string name="trds_settings_title">Inverted Theme</string> 
+
 </resources>
