Add camera and power to lockscreen longpress button options Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: I9c0d2d5c897f917f3e949c7640318e95cc39ab03

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5131,6 +5131,8 @@
     <string name="lockscreen_buttons_previous">Previous song</string>
     <string name="lockscreen_buttons_playpause">Play/Pause music</string>
     <string name="lockscreen_buttons_toggle_sound">Toggle sound</string>
+    <string name="lockscreen_buttons_camera">Launch camera</string>
+    <string name="lockscreen_buttons_power_off">Power off</string>
 
     <!-- Quick settings panel  -->
     <string name="quick_settings_panel_title">Quick Settings panel</string>
