Add notification opacity options and phone breathe options.  Booya! Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: Iaacb194a8c17b3ee1a410a00ca3deaeaf9a670ca

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5838,6 +5838,8 @@ rience. Better keep it disabled on lower end devices.</string>
     <!-- Breathing Notifications -->
    <string name="mms_breath">Breathing SMS</string>
    <string name="mms_breath_summary">Will give your sms notifications a breathing effect on the statusbar.</string>
+   <string name="missed_call_breath">Breathing Missed Call</string>
+   <string name="missed_call_breath_summary">Will give your missed call notifications a breathing effect on the statusbar.</string>
 
     <!-- About BeanStalk -->
     <string name="about_beanstalk_settings_title">About BeanStalk</string>
@@ -5861,5 +5863,9 @@ rience. Better keep it disabled on lower end devices.</string>
 
     <!-- TRDS Settings -->
     <string name="trds_settings_title">Inverted Theme</string> 
+
+    <!-- Status bar notification icon opacity -->
+    <string name="status_bar_icon_opacity">Notification icon opacity</string>
+    <string name="status_bar_icon_opacity_summary">Sets opacity of status bar notification icons</string>     
 
 </resources>
