--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5084,9 +5084,10 @@
     <string name="status_bar_style_hidden">Hidden</string>
     <string name="status_bar_signal_text_show_text">Text</string>
     <string name="status_bar_battery_status_percentage">Percentage</string>
-<string name="status_bar_battery_status_icon_percentage">Icon with percentage</string>
+    <string name="status_bar_battery_status_icon_percentage">Icon with percentage</string>
     <string name="status_bar_battery_status_circle">Circle</string>
     <string name="status_bar_battery_status_circle_percentage">Circle with percentage</string>
+    <string name="status_bar_battery_status_gear">Circle Gear</string> 
 
     <!-- Status bar notification count -->
     <string name="status_bar_notif_count_title">Show notification count</string>
