Add square battery style options 2/2 Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: I2b1e46b66e5f7937071774f29e083db1575399d2

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5087,7 +5087,8 @@
     <string name="status_bar_battery_status_icon_percentage">Icon with percentage</string>
     <string name="status_bar_battery_status_circle">Circle</string>
     <string name="status_bar_battery_status_circle_percentage">Circle with percentage</string>
-    <string name="status_bar_battery_status_gear">Circle Gear</string> 
+    <string name="status_bar_battery_status_gear">Circle Gear</string>
+    <string name="status_bar_battery_status_square">Square</string>
 
     <!-- Status bar notification count -->
     <string name="status_bar_notif_count_title">Show notification count</string>
