Alt circle battery style 2 of 2.
Think were good with battery styles now.  :)
Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

Change-Id: I2a054d93acb7f7395e65283f371463473e7e146c

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5089,6 +5089,7 @@
     <string name="status_bar_battery_status_circle_percentage">Circle with percentage</string>
     <string name="status_bar_battery_status_gear">Circle Gear</string>
     <string name="status_bar_battery_status_square">Square</string>
+    <string name="status_bar_battery_status_alt_circle">Alt Circle</string>
 
     <!-- Status bar notification count -->
     <string name="status_bar_notif_count_title">Show notification count</string>
