--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5639,18 +5639,11 @@ rience. Better keep it disabled on lower end devices.</string>
 
     <string name="disable_bootanimation_title">Disable boot animation</string>
     <string name="custom_bootanimation_title">Custom boot animation</string>
-    <string name="custom_bootanimation_summary">Select a custom zip from sdcard to use as your new boot animation</string> 
+    <string name="custom_bootanimation_summary">Select bootanimation zip from sdcard. Previous bootanimation will be backed up to /system/media.</string>
     <string name="install_file_manager_error">No application found to pick the zip file. Please install a file manager.</string>
     <string name="insult_jerk">Animation disabled.</string>
     <string name="insult_protekk">Animation disabled.</string>
     <string name="insult_unicorns">Animation disabled.</string>
-    <string name="bootanimation_preview">Bootanimation preview</string>
-    <string name="apply">Apply</string>
-    <string name="clear_custom_bootanimation">Clear custom boot animation</string>
-    <string name="set_custom_bootanimation">Set custom...</string> 
-    <string name="creating_preview">Creating preview...</string>
-    <string name="error_reading_zip_file">Error reading zip file</string>
-    <string name="error_creating_preview">Error creating preview</string> 
 
     <string name="dual_pane_prefs_title">Dual pane preferences</string>
     <string name="dual_pane_prefs_summary">Choose when to use dual pane preferences</string>
