add optiion to daydream on wireless charger 2/2 Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: Iff5f6510c576e06cf4b7dda5314172ab9c87711d

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5723,6 +5723,9 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="swap_volume_buttons_title">Swap volume buttons</string>
     <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated by 90 or 180 degrees</string>
 
+    <!--  Display settings screen, summary fragment for screen saver options, activate when wirelessly charging -->
+    <string name="screensaver_settings_summary_wireless">While charging wirelessly</string> 
+
     <!-- Automatic brightness customization -->
     <string name="light_sensor_current_value">Current light sensor value: <xliff:g id="light_level">%d</xliff:g> lux</string>
     <string name="auto_brightness_dialog_title">Automatic brightness levels</string>
