Add Lock volume keys in silent mode [2/2] Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: I79aafddfc040ff5ef9db477b4971fb1280e9a362

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5907,4 +5907,8 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="status_bar_icon_opacity">Notification icon opacity</string>
     <string name="status_bar_icon_opacity_summary">Sets opacity of status bar notification icons</string>     
 
+    <!-- Lock volume keys -->
+    <string name="sound_lock_volume_keys_title">Lock volume keys</string>
+    <string name="sound_lock_volume_keys_summary">Prevents accidental unset of silent mode by pressing volume keys</string>
+
 </resources>
