--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4792,6 +4792,11 @@
     <string name="pref_use_16bpp_alpha_title">16bit transparency</string>
     <string name="pref_use_16bpp_alpha_summary">Better graphics performance, but lower quality and may cause visual artifacts (requires reboot)</string>
 
+    <!-- Performance Setting : Vibration Strength -->
+    <string name="pref_vibe_strength_title">Vibration Strength</string>
+    <string name="pref_vibe_strength_summary">Vibration strength is <xliff:g id="vibe_strength">%1$s</xliff:g></string>
+    <string name="pref_vibe_strength_dialogtitle">Enter a value between 0-120</string> 
+
     <!-- Display : Rotation  -->
     <string name="display_rotation_title">Rotation</string>
     <string name="display_rotation_disabled">Disabled</string>
