--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5174,6 +5174,7 @@
     <string name="title_tile_torch">Torch</string>
     <string name="title_tile_lockscreen">Lock screen</string>
     <string name="title_tile_lte">LTE</string>
+    <string name="title_tile_reboot">Reboot</string> 
     <string name="title_tile_mobiledata">Mobile data</string>
     <string name="title_tile_profile">Profile</string>
     <string name="title_tile_autorotate">Orientation</string>
