--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5198,6 +5198,7 @@
     <string name="title_tile_screen_timeout">Screen timeout</string>
     <string name="title_toggle_favcontact">Toggle Favorite Contact</string>
     <string name="title_tile_favcontact">Favorite Contact</string>
+    <string name="title_tile_fcharge">Fast charge</string> 
     <string name="title_tile_usb_tether">USB Tether</string>
     <string name="title_tile_volume">Volume</string>
     <string name="title_tile_quiet_hours">Quiet hours</string>
